<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DiaryActivity">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/diary_fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="auto"
        android:focusableInTouchMode="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/scrollView2"
        app:srcCompat="@android:drawable/ic_input_add" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/diary_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato_bold"
                        android:gravity="center_horizontal"
                        android:text="@string/zero"
                        android:textColor="@android:color/holo_green_dark"
                        android:textSize="30sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/diary_hygiene_label"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato_bold"
                        android:text="@string/input_hygiene_label"
                        android:textColor="@android:color/black"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/diary_hygiene"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato_bold"
                        android:gravity="right"
                        android:text="@string/zero"
                        android:textColor="@android:color/black"
                        android:textSize="22sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/diary_shower_label"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato_bold"
                        android:text="@string/input_shower_label"
                        android:textColor="@android:color/black"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/diary_shower"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato_bold"
                        android:gravity="right"
                        android:text="@string/zero"
                        android:textColor="@android:color/black"
                        android:textSize="22sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/diary_drinking_label"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato_bold"
                        android:text="@string/input_drinking_label"
                        android:textColor="@android:color/black"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/diary_drinking"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato_bold"
                        android:gravity="right"
                        android:text="@string/zero"
                        android:textColor="@android:color/black"
                        android:textSize="22sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/diary_toilet_label"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato_bold"
                        android:text="@string/input_toilet_label"
                        android:textColor="@android:color/black"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/diary_toilet"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato_bold"
                        android:gravity="right"
                        android:text="@string/zero"
                        android:textColor="@android:color/black"
                        android:textSize="22sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/diary_dishes_label"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato_bold"
                        android:text="@string/input_dishes_label"
                        android:textColor="@android:color/black"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/diary_dishes"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato_bold"
                        android:gravity="right"
                        android:text="@string/zero"
                        android:textColor="@android:color/black"
                        android:textSize="22sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/diary_laundry_label"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato_bold"
                        android:text="@string/input_laundry_label"
                        android:textColor="@android:color/black"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/diary_laundry"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato_bold"
                        android:gravity="right"
                        android:text="@string/zero"
                        android:textColor="@android:color/black"
                        android:textSize="22sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/diary_cooking_label"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato_bold"
                        android:text="@string/input_cooking_label"
                        android:textColor="@android:color/black"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/diary_cooking"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato_bold"
                        android:gravity="right"
                        android:text="@string/zero"
                        android:textColor="@android:color/black"
                        android:textSize="22sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/diary_cleaning_label"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato_bold"
                        android:text="@string/input_cleaning_label"
                        android:textColor="@android:color/black"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/diary_cleaning"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato_bold"
                        android:gravity="right"
                        android:text="@string/zero"
                        android:textColor="@android:color/black"
                        android:textSize="22sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/diary_other_label"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato_bold"
                        android:text="@string/input_other_label"
                        android:textColor="@android:color/black"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/diary_other"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato_bold"
                        android:gravity="right"
                        android:text="@string/zero"
                        android:textColor="@android:color/black"
                        android:textSize="22dp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="15dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="15dp">

                    <TextView
                        android:id="@+id/diary_total_label"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato_bold"
                        android:text="@string/input_total_label"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="28sp" />

                    <TextView
                        android:id="@+id/diary_total"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato_bold"
                        android:gravity="right"
                        android:text="@string/zero"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="28sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/diary_prev_button"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/holo_green_light"
                        android:fontFamily="@font/lato_bold"
                        android:text="@string/prev_button"
                        android:textColor="@android:color/white"
                        android:textSize="24sp" />

                    <Button
                        android:id="@+id/diary_overview_button"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/holo_blue_light"
                        android:fontFamily="@font/lato_bold"
                        android:text="@string/overview_button"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/diary_next_button"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/holo_green_light"
                        android:fontFamily="@font/lato_bold"
                        android:text="@string/next_button"
                        android:textSize="24sp" />
                </TableRow>

            </TableLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>